	- rearrange functions to minimize exported routines in librpmbuild API.
	- generalize cpio I/O to eliminate pipe to exec'd gzip on install.
	- finish planting /usr/lib/rpm (remove compatibility symlinks)
	- add new fully recursive macro.c
	- add {init,add,expand}Macro args everywhere (new macro.c compatibility)
	- create /usr/lib/rpm directory and move rpmrc et al there

2.5.3 -> 2.5.4:
	- solaris portability patch resurrection (Steve Sanberg).
	- add %license/%readme virtual file attributes
        - align "Build Host:" with other fields

2.5.2 -> 2.5.3:
	- copy changelog tags to sub-packages just before packaging.
	- added EPOCH handling to supplement serial numbers
	- add RPMTAG_EPOCH and RPMTAG_CAPABILITY init to 0.
	- fix infinite recursion on non-ERANGE return from getcwd() during
	  install (Matt Wilson).
	- rm .depend for multiple builds in same tree (Will Partain)
	- add special case code for "/" in %files.
	- better query semantics with symlinks (Tim Mooney)
	- build.c: fix incorrect check for successful open
	- allow %define with leading whitespace
	- use /usr/lib/rpm for rpmpopt, rpmrc, find-requires, find-provides
	- added popt 'exec' functionality
	- made --rebuilddb a bit more robust by checking data types
	- added --freshen via popt exec stuff
	- fixed spelling of expected
	- updated de.po (Karl Eichwalder)
	- do a better job of checking for a spec file in tarballs
	  (Pavel Roskin)
	- fixed --triggers alias (Michael Andres)
	- added :hex query format
	- fixed --querytags to display virtual tags

2.5.1 -> 2.5.2:
	- added -bs to build just a source package
	- included irix.req and irix.prov (Tim Mooney)
	- copy CHANGELOG* and URL tags to all subpackages
	- follow symlinks when packaging sources
	- handle %files -f with no %setup (no build directory)
	- fixed ugly i18n header bug
	- deal with lang paths sanely when entries are missing languages
	- fix bug packing /usr/doc when last file was %dir
	- added --last alias
	- fix :depflags query format